--- a/app/modules/members/templates/members/portal/components/offer_card_macro.html
+++ b/app/modules/members/templates/members/portal/components/offer_card_macro.html
@@ -27,9 +27,9 @@ offer.membership_discount) %}
         {% if offer.classification_values %}
         <div class="offer-tags">
             {% set tag_details = {
-            'first_time_offer': {'label': 'استخدام أول مرة'},
+            'first_time_offer': {'label': 'اول مره'},
             'loyalty_offer': {'label': 'عرض الولاء'},
-            'mid_week': {'label': 'وسط الأسبوع'},
+            'mid_week': {'label': 'منتصف الاسبوع'},
             'happy_hour': {'label': 'ساعة السعادة'},
             'active_members_only': {'label': 'للأعضاء النشطين'}
             } %}
